<resources>
    <string name="app_name">Sailor App</string>
    <string name="button_send">Send</string>
    <string name="edit_name">Renseignez votre nom</string>
    <string name="user_name">Vous êtes :</string>
    <string name="welcome">Avez-vous le pied marin ?</string>
    <string name="button_unjoueur">Mode un joueur</string>
    <string name="button_multi">Mode multijoueur</string>
    <string name="button_apropos">A propos</string>
    <string name="score">"Dernier score : "</string>
    <string name="score_value">0</string>
    <string name="apropos_text1">Je suis la page \"A propos\"</string>
    <string name="game_tapeleclou_title">Tap ! Tap ! Tap !</string>
    <string name="game_tapeleclou_score">score : 0</string>
    <string name="game_jeuduniveau_x">valeur de x</string>
    <string name="game_jeuduniveau_y">valeur de y</string>
    <string name="game_jeuduniveau_z">valeur de z</string>
    <string name="game_jeuduhulk">zzzzzzzz</string>
    <string name="game_morse_title">Owk ! Owk ! Owk !</string>
    <string name="game_morse_descript">Press court ou long pour commencer !</string>
    <string name="game_morse_modele">Ecrivez SOS en morse</string>
    <string name="game_morse_message">Tu verras ton message ici !</string>
    <string name="game_morse_button">Restart</string>
    <string name="game_jointhecable_electricity">Amène l\'électricité à la lampe !</string>
    <string name="gameLauncher_button_game1">Tape Tape Hammer !</string>
    <string name="gameLauncher_button_game2">Join the cable</string>
    <string name="gameLauncher_button_game3">Le jeu du niveau !</string>
    <string name="gameLauncher_button_game4">Le jeu du HUUUULK !</string>
    <string name="gameLauncher_button_game5">Le bô morse O !</string>
    <string name="gameLauncher_button_game6">QCM</string>
    <string name="launchergame_descript">Jeux disponibles</string>
    <string name="game_decode_text">Trouve la combinaison du cadena</string>
    <string name="game_decode_1">X</string>
    <string name="game_decode_2">X</string>
    <string name="game_decode_3">X</string>
    <string name="game_jeuduniveau_text">Utilise ta canne à pêche !</string>
    <string name="choose_game">Allez-vous relever tous les défis ?</string>
    <string name="launch_qcm">On passe à la suite ?</string>
    <string name="StringQCM" />
    <string name="button_entrainement">Entraînement</string>
</resources>
