<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_map"
    tools:context=".PageAccueil">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:alpha="0.7"
        android:background="#000000"
        android:fontFamily="sans-serif"
        android:text="TextView"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView_welcome" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:alpha="0.7"
        android:background="#000000"
        android:text="@string/user_name"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_welcome" />

    <TextView
        android:id="@+id/textView_welcome"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginTop="32dp"
        android:alpha="0.7"
        android:background="#000000"
        android:gravity="center"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_unjoueur"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/roundedbutton_accueil"
        android:onClick="sendSolo"
        android:text="@string/button_unjoueur"
        android:textColor="#878787"
        app:layout_constraintBottom_toTopOf="@+id/button_multi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_welcome"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/button_multi"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/roundedbutton_accueil"
        android:onClick="sendMulti"
        android:text="@string/button_multi"
        android:textColor="#878787"
        app:layout_constraintBottom_toTopOf="@+id/button_entrainement"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_unjoueur"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/button_apropos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/roundedbutton_accueil"
        android:onClick="sendAPropos"
        android:text="@string/button_apropos"
        android:textColor="#878787"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_entrainement" />

    <Button
        android:id="@+id/button_entrainement"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/roundedbutton_accueil"
        android:text="@string/button_entrainement"
        android:textColor="#878787"
        app:layout_constraintBottom_toTopOf="@+id/button_apropos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_multi" />

</android.support.constraint.ConstraintLayout>