<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_morse"
    tools:context=".GameMorse">

    <TextView
        android:id="@+id/game_morse_title"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="7dp"
        android:alpha="0.7"
        android:background="#000000"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/game_morse_title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/game_morse_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:alpha="0.7"
        android:background="#000000"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/game_morse_descript"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/game_morse_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/game_morse_message"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:alpha="0.7"
        android:background="#000000"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/game_morse_message"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_morse_title" />

    <Button
        android:id="@+id/game_morse_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/roundedbutton_accueil"
        android:onClick="restart"
        android:text="@string/game_morse_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>